--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 }
 
-.bubbels {
+.bubbles {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -22,7 +22,7 @@ body {
 
 }
 
-.bubbel{
+.bubble{
     position: absolute;
     bottom: 0;
     width: 50px;
@@ -39,7 +39,8 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(236,95,118,0.858
 
 
 
-.bubbel:nth-child(1){
+
+.bubble:nth-child(1){
     width: 70px;
     height: 70px;
     left: 10%;
@@ -50,7 +51,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(236,95,118,0.858
 background: radial-gradient(circle, rgba(46,68,126,0.1923144257703081) 22%, rgba(104,87,238,0.6432948179271709) 49%, rgba(28,247,247,1) 72%);
 }
 
-.bubbel:nth-child(2){
+.bubble:nth-child(2){
     width: 30px;
     height: 30px;
     left: 20%;
@@ -60,7 +61,7 @@ background: radial-gradient(circle, rgba(46,68,126,0.1923144257703081) 22%, rgba
 background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(236,231,95,0.8589810924369747) 65%);
 }
 
-.bubbel:nth-child(3){
+.bubble:nth-child(3){
     width: 60px;
     height: 60px;
     left: 30%;
@@ -70,7 +71,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(236,231,95,0.858
     background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(236,95,232,0.8589810924369747) 65%);
 }
 
-.bubbel:nth-child(4){
+.bubble:nth-child(4){
     width: 40px;
     height: 40px;
     left: 40%;
@@ -83,7 +84,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(221,95,236,0.858
     
 }
 
-.bubbel:nth-child(5){
+.bubble:nth-child(5){
     width: 80px;
     height: 80px;
     left: 50%;
@@ -95,7 +96,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(118,236,95,0.858
     
 }
 
-.bubbel:nth-child(6){
+.bubble:nth-child(6){
     width: 70px;
     height: 70px;
     left: 60%;
@@ -107,7 +108,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(238,136,87,0.858
     
 }
 
-.bubbel:nth-child(7){
+.bubble:nth-child(7){
     width: 30px;
     height: 30px;
     left: 70%;
@@ -119,7 +120,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(229,236,95,0.858
     
 }
 
-.bubbel:nth-child(8){
+.bubble:nth-child(8){
     width: 70px;
     height: 80px;
     left: 80%;
@@ -131,7 +132,7 @@ background: radial-gradient(circle, rgba(46,68,126,0) 27%, rgba(95,236,115,0.858
     
 }
 
-.bubbel:nth-child(9){
+.bubble:nth-child(9){
     width: 40px;
     height: 40px;
     left: 90%;
